# chokotto2

./: .gitignore  Cargo.toml  Dockerfile
chokotto2_client/: Cargo.toml
chokotto2_server/: Cargo.toml
src/: main.rs
