[package]
name = "chokotto2"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.80.0", features = ["anyhow", "serve-static"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "fs"] }
regex = "1.11.1"
